finished both html files setup

--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script src="./script.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <title>Character Filter</title>
 </head>
 <body>
-    
+    <h1>Character Filter</h1>
+    <form id="filterForm">
+        <input type="text" id="filterId" placeholder="Enter Character ID">
+        <input type="text" id="filterName" placeholder="Enter Character Name">
+        <button type="submit">Filter Character</button>
+        <div id="resultContainer"></div>
+    </form>
 </body>
 </html>
