trying to console.log json

--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./script.js"></script>
+    <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
     <title>Character Filter</title>
 </head>
 <body>
     <h1>Character Filter</h1>
     <form id="filterForm">
-        <input type="text" id="filterId" placeholder="Enter Character ID">
-        <input type="text" id="filterName" placeholder="Enter Character Name">
+        <input type="number" id="characterId" placeholder="Enter Character ID">
+        <input type="text" id="characterName" placeholder="Enter Character Name">
         <button type="submit">Filter Character</button>
         <div id="resultContainer"></div>
     </form>
