--- a/character.html
+++ b/character.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="script.js"></script>
+    <script defer src="script.js"></script>
     <link rel="stylesheet" href="style.css">
     <title>Character Details</title>
 </head>
 <body>
     <h1>Character Details</h1>
-    <div id="characterInfo"></div>
+    <div class="characterInfo">
+        <a href="./index.html">Home Page</a>
+    </div>
 </body>
 </html>
