--- a/character.html
+++ b/character.html
@@ -9,8 +9,18 @@
 </head>
 <body>
     <h1>Character Details</h1>
+    <form class="filterForm">
+        <input type="number" class="characterId" placeholder="Enter Character ID">
+        <input type="text" class="characterName" placeholder="Enter Character Name">
+        <button type="submit">Filter Character</button>
+    </form>
     <div class="characterInfo">
-        <a href="./index.html">Home Page</a>
+        
     </div>
+    <nav>
+        <ul>
+            <li><a href="./index.html">Home Page</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
