--- a/character.html
+++ b/character.html
@@ -9,11 +9,23 @@
 </head>
 <body>
     <h1>Character Details</h1>
-    <form class="filterForm">
-        <input type="number" class="characterId" placeholder="Enter Character ID">
-        <input type="text" class="characterName" placeholder="Enter Character Name">
+
+    <div class="form">
+        <form class="form1">
+            <input type="number" class="characterId" placeholder="Enter Character ID">
+        </form>
+        <form class="form2">
+            <input type="text" name="characterName" placeholder="Enter Character Name">
+            <select name="status" id="status">
+                <option value="">--Select Status--</option>
+                <option value="alive">alive</option>
+                <option value="dead">dead</option>
+                <option value="unknown">unknown</option>
+            </select>
+        </form>
         <button type="submit">Filter Character</button>
-    </form>
+    </div>
+
     <div class="characterInfo">
         
     </div>
