--- a/character.html
+++ b/character.html
@@ -12,7 +12,7 @@
 
     <div class="form">
         <form class="form1">
-            <input type="number" class="characterId" placeholder="Enter Character ID">
+            <input type="number" class="characterId" name="id" placeholder="Enter Character ID">
         </form>
         <form class="form2">
             <input type="text" name="characterName" placeholder="Enter Character Name">
