--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script defer src="script.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <title>Character Filter</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Character Filter</h1>
-    <form class="filterForm">
-        <div class="resultContainer">
-            <a href="./character.html">Character Info</a>
-        </div>
-    </form>
-</body>
+    <nav>
+      <ul>
+        <li><a href="./character.html">Character Info</a></li>
+      </ul>
+    </nav>
+    <footer>© 2013 Rick and Morty, LLC.</footer>
+  </body>
 </html>
