--- a/character.html
+++ b/character.html
@@ -1,38 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script defer src="script.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <title>Character Details</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Character Details</h1>
 
     <div class="form">
-        <form class="form1">
-            <input type="number" class="characterId" name="id" placeholder="Enter Character ID">
-        </form>
-        <form class="form2">
-            <input type="text" name="characterName" placeholder="Enter Character Name">
-            <select name="status" id="status">
-                <option value="">--Select Status--</option>
-                <option value="alive">alive</option>
-                <option value="dead">dead</option>
-                <option value="unknown">unknown</option>
-            </select>
-        </form>
-        <button type="submit">Filter Character</button>
+      <form class="form1">
+        <input
+          type="number"
+          class="characterId"
+          name="id"
+          placeholder="Enter Character ID"
+        />
+      </form>
+      <form class="form2">
+        <input
+          type="text"
+          name="characterName"
+          placeholder="Enter Character Name"
+        />
+        <select name="status" id="status">
+          <option value="">--Select Status--</option>
+          <option value="alive">alive</option>
+          <option value="dead">dead</option>
+          <option value="unknown">unknown</option>
+        </select>
+      </form>
+      <button type="submit">Filter Character</button>
     </div>
 
-    <div class="characterInfo">
-        
-    </div>
+    <div class="characterInfo"></div>
     <nav>
-        <ul>
-            <li><a href="./index.html">Home Page</a></li>
-        </ul>
+      <ul>
+        <li><a href="./index.html">Home Page</a></li>
+      </ul>
     </nav>
-</body>
+    <footer>© 2013 Rick and Morty, LLC.</footer>
+  </body>
 </html>
