added error message

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script defer src="script.js"></script>
     <link rel="stylesheet" href="style.css" />
-    <title>Character Filter</title>
+    <title>Home of Rick and Morty Universe</title>
   </head>
   <body>
-    <h1>Character Filter</h1>
+    <h1>RICKY AND MORTY CHARACTER UNIVERSE</h1>
     <nav>
       <ul>
         <li><a href="./character.html">Character Info</a></li>
