--- a/character.html
+++ b/character.html
@@ -8,7 +8,10 @@
     <title>Character Details</title>
   </head>
   <body>
-    <h1>Character Details</h1>
+    <header>
+        <h1>Character Details</h1>
+
+    </header>
 
     <div class="form">
       <form class="form1">
@@ -25,7 +28,7 @@
           name="characterName"
           placeholder="Enter Character Name"
         />
-        <select name="status" id="status">
+        <select name="status" id="status" >
           <option value="">--Select Status--</option>
           <option value="alive">alive</option>
           <option value="dead">dead</option>
