--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <title>Home of Rick and Morty Universe</title>
   </head>
   <body>
-    <h1>RICKY AND MORTY CHARACTER UNIVERSE</h1>
+    <header>
+        <h1>RICKY AND MORTY CHARACTER UNIVERSE</h1>
+        <!-- <img src="https://i.guim.co.uk/img/media/b563ac5db4b4a4e1197c586bbca3edebca9173cd/0_12_3307_1985/master/3307.jpg?width=965&dpr=1&s=none" alt="Rick and Morty"/> -->
+    </header>
     <nav>
       <ul>
         <li><a href="./character.html">Character Info</a></li>
