finished html set up

--- a/index.html
+++ b/index.html
@@ -7,16 +7,20 @@
     <link rel="stylesheet" href="style.css" />
     <title>Home of Rick and Morty Universe</title>
   </head>
-  <body>
-    <header>
+  <body> 
+    <div class="main-header">
         <h1>RICKY AND MORTY CHARACTER UNIVERSE</h1>
-        <!-- <img src="https://i.guim.co.uk/img/media/b563ac5db4b4a4e1197c586bbca3edebca9173cd/0_12_3307_1985/master/3307.jpg?width=965&dpr=1&s=none" alt="Rick and Morty"/> -->
-    </header>
-    <nav>
-      <ul>
-        <li><a href="./character.html">Character Info</a></li>
-      </ul>
-    </nav>
-    <footer>© 2013 Rick and Morty, LLC.</footer>
+    </div>
+    <div class="page-container">
+        <div class="content">
+
+        </div>
+        <nav>
+          <ul>
+            <li><a href="./character.html">Character Guide</a></li>
+          </ul>
+        </nav>
+        <footer>© 2013 Rick and Morty, LLC.</footer>
+    </div>
   </body>
 </html>
