--- a/character.html
+++ b/character.html
@@ -7,42 +7,42 @@
     <link rel="stylesheet" href="style.css" />
     <title>Character Details</title>
   </head>
-  <body>
-    <header>
-        <h1>Character Details</h1>
-
-    </header>
-
-    <div class="form">
-      <form class="form1">
-        <input
-          type="number"
-          class="characterId"
-          name="id"
-          placeholder="Enter Character ID"
-        />
-      </form>
-      <form class="form2">
-        <input
-          type="text"
-          name="characterName"
-          placeholder="Enter Character Name"
-        />
-        <select name="status" id="status" >
-          <option value="">--Select Status--</option>
-          <option value="alive">alive</option>
-          <option value="dead">dead</option>
-          <option value="unknown">unknown</option>
-        </select>
-      </form>
-      <button type="submit">Filter Character</button>
+  <body class="character-body">
+    <div class="character-header">
+        <h1>Character Guide</h1>
     </div>
-    <div class="characterInfo"></div>
-    <nav>
-      <ul>
-        <li><a href="./index.html">Home Page</a></li>
-      </ul>
-    </nav>
-    <footer>© 2013 Rick and Morty, LLC.</footer>
+    <div class="character-container">
+        <div class="form">
+          <form class="form1">
+            <input
+              type="number"
+              class="characterId"
+              name="id"
+              placeholder="Enter Character ID"
+            />
+          </form>
+          <form class="form2">
+            <input
+              type="text"
+              name="characterName"
+              placeholder="Enter Character Name"
+            />
+            <select name="status" id="status" >
+              <option value="">--Select Status--</option>
+              <option value="alive">alive</option>
+              <option value="dead">dead</option>
+              <option value="unknown">unknown</option>
+            </select>
+          </form>
+          <button type="submit">Filter Character</button>
+        </div>
+        <div class="characterInfo"></div>
+        <nav>
+          <ul>
+            <li><a href="./index.html">Home Page</a></li>
+          </ul>
+        </nav>
+        <footer>© 2013 Rick and Morty, LLC.</footer>
+    </div>
   </body>
 </html>
