--- a/character.html
+++ b/character.html
@@ -12,6 +12,7 @@
         <h1>Character Guide</h1>
     </div>
     <div class="character-container">
+      <a href="./index.html">Home</a>
         <div class="form">
           <form class="form1">
             <input
@@ -37,11 +38,6 @@
           <button type="submit">Filter Character</button>
         </div>
         <div class="characterInfo"></div>
-        <nav>
-          <ul>
-            <li><a href="./index.html">Home Page</a></li>
-          </ul>
-        </nav>
         <footer>© 2013 Rick and Morty, LLC.</footer>
     </div>
   </body>
