--- a/index.html
+++ b/index.html
@@ -11,15 +11,11 @@
     <div class="main-header">
         <h1>RICKY AND MORTY CHARACTER UNIVERSE</h1>
     </div>
+    <a href="./character.html">Character Guide</a>
     <div class="page-container">
         <div class="content">
 
         </div>
-        <nav>
-          <ul>
-            <li><a href="./character.html">Character Guide</a></li>
-          </ul>
-        </nav>
         <footer>© 2013 Rick and Morty, LLC.</footer>
     </div>
   </body>
