--- a/character.html
+++ b/character.html
@@ -9,36 +9,30 @@
   </head>
   <body class="character-body">
     <div class="character-header">
-        <h1>Character Guide</h1>
+      <h1>Character Guide</h1>
     </div>
     <div class="character-container">
       <a href="./index.html">Home</a>
-        <div class="form">
-          <form class="form1">
-            <input
-              type="number"
-              class="characterId"
-              name="id"
-              placeholder="Enter Character ID"
-            />
-          </form>
-          <form class="form2">
-            <input
-              type="text"
-              name="characterName"
-              placeholder="Enter Character Name"
-            />
-            <select name="status" id="status" >
-              <option value="">--Select Status--</option>
-              <option value="alive">alive</option>
-              <option value="dead">dead</option>
-              <option value="unknown">unknown</option>
-            </select>
-          </form>
-          <button type="submit">Filter Character</button>
-        </div>
-        <div class="characterInfo"></div>
-        <footer>© 2013 Rick and Morty, LLC.</footer>
+      <div class="form">
+        <form class="form1">
+          <p>Enter Id Number</p>
+          <input type="number" class="characterId" name="id" placeholder="Enter Character ID" />
+        </form>
+        <p>OR</p>
+        <form class="form2">
+          <p>Enter Name</p>
+          <input type="text" name="characterName" placeholder="Enter Character Name" />
+          <select name="status" id="status">
+            <option value="">--Select Status--</option>
+            <option value="alive">alive</option>
+            <option value="dead">dead</option>
+            <option value="unknown">unknown</option>
+          </select>
+        </form>
+        <button type="submit">Submit</button>
+      </div>
+      <div class="characterInfo"></div>
+      <footer>© 2013 Rick and Morty, LLC.</footer>
     </div>
   </body>
 </html>
