started readme file

--- a/character.html
+++ b/character.html
@@ -23,7 +23,7 @@
           <p>Enter Name</p>
           <input type="text" name="characterName" placeholder="Enter Character Name" />
           <select name="status" id="status">
-            <option value="">--Select Status--</option>
+            <option value="">--Select Living Status--</option>
             <option value="alive">alive</option>
             <option value="dead">dead</option>
             <option value="unknown">unknown</option>
