added transition to links

--- a/character.html
+++ b/character.html
@@ -11,8 +11,10 @@
     <div class="character-header">
       <h1>Character Guide</h1>
     </div>
-    <div class="character-container">
+    <div class="link-2">
       <a href="./index.html">Home</a>
+    </div>
+    <div class="character-container">
       <div class="form">
         <form class="form1">
           <p>Enter Id Number</p>
