--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <div class="main-header">
         <h1>RICKY AND MORTY CHARACTER UNIVERSE</h1>
     </div>
-    <a href="./character.html">Character Guide</a>
+    <div class="link-1">
+      <a href="./character.html">Character Guide</a>
+    </div>
     <div class="page-container">
         <div class="content">
 
