--- a/index.html
+++ b/index.html
@@ -26,6 +26,31 @@
           <div class="char-uni">
             <p>Do you want to learn more about the different characters that exist. There are two separate forms that are on the Character Guide page. However the you are only allowed to submit one of the forms. The first form will search for a single character by their id. The second form will filter through the characters either by their name, living status or both criteria. This may return multiple characters. The result of the form will return character(s) information such as name, gender, species, origin, and living status. There are also some special features to the name section of the second form. This part of the form will filter through the character based on the partcial name inputed by the user. It will then return all the charcters who name includes that sub-text.</p>
           </div>
+          <div class="card">
+            <img src="/w3images/team2.jpg" alt="Rick" style="width:100%">
+            <h3>Rick Sanchez</h3>
+            <p class="bio">A brilliant but boozy scientist, he needs some help on his many adventures so he needs a companion. He takes his grandson on his many adventures between different dimensions. Rick, known intergalactically and to the Council of Rick’s as Rick C-137, relating to the dimension that he lives in.</p>
+          </div>
+          <div class="card">
+            <img src="/w3images/team2.jpg" alt="Morty" style="width:100%">
+            <h3>Morty Smith</h3>
+            <p class="bio">Rick’s grandson, he is in high school and whilst trying to pass his classes (especially maths with Mr. Goldenfold) Rick is always taking him out of class to help him out on his adventures. Morty starts out being a lot more ethically moral than Rick, for example, he killed an assassin because he thinks human life should be protected. However, as the season goes on he becomes confident and charismatic, as well as becoming more like his grandfather.</p>
+          </div>
+          <div class="card">
+            <img src="/w3images/team2.jpg" alt="Beth" style="width:100%">
+            <h3>Beth Sanchez</h3>
+            <p class="bio">Rick’s daughter, he left her and his wife when she was a child and only came back 20 years later. Beth has abandonment issues due to this and she is terrified of her father leaving again. She is the father of Morty and Summer and the wife of Jerry.</p>
+          </div>
+          <div class="card">
+            <img src="/w3images/team2.jpg" alt="Jerry" style="width:100%">
+            <h3>Jerry Smith</h3>
+            <p class="bio">The very scared husband of Beth, father of Morty and Summer, he is a very timid guy and is scared of almost everything. He doesn’t appreciate Rick after leaving Beth and for taking Morty on “high-tech sci-fi-rigmarole”.</p>
+          </div>
+          <div class="card">
+            <img src="/w3images/team2.jpg" alt="Summer" style="width:100%">
+            <h3>Summer Smith</h3>
+            <p class="bio">Morty’s sister and the daughter of Beth and Jerry, she always tries to prove herself as a good companion to Rick so she’ll be invited more but is actually quite an emotional teenager at heart. She cried when the Devil fired her from the business she helped him create.</p>
+          </div>
           <div class="link-1">
             <a href="./character.html">Character Guide</a>
           </div>
