--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <p class="bio">Morty's sister and the daughter of Beth and Jerry, she always tries to prove herself as a good companion to Rick so she'll be invited more but is actually quite an emotional teenager at heart. She cried when the Devil fired her from the business she helped him create.</p>
             </div>
           </div>
-          <p>This is only the show's main characters and in an interdimensional reality as crazy and wild as Rick and Morty, it can be hard to keep all of the characters straight. But you can have a further look into the many characters that exist within this crazy world. Just go to the Character Guide link that is down below.</p>
+          <p class="text-link">This is only the show's main characters and in an interdimensional reality as crazy and wild as Rick and Morty, it can be hard to keep all of the characters straight. But you can have a further look into the many characters that exist within this crazy world. Just go to the Character Guide link that is down below.</p>
           <div class="link-1">
             <a href="./character.html">Character Guide</a>
           </div>
