--- a/character.html
+++ b/character.html
@@ -16,7 +16,7 @@
     </div>
     <details class="form-info">
       <summary>Form Instructions</summary>
-      <p>There are two separate forms that are on the Character Guide page. However the you are only allowed to submit one of the forms. The first form will search for a single character by their id. The second form will filter through the characters either by their name, living status or both criteria. This may return multiple characters. The result of the form will return character(s) information such as name, gender, species, origin, and living status. There are also some special features to the name section of the second form. This part of the form will filter through the character based on the partcial name inputed by the user. It will then return all the charcters who name includes that sub-text.</p>
+      <p class="sum">There are two separate forms that are on the Character Guide page. However the you are only allowed to submit one of the forms. The first form will search for a single character by their id. The second form will filter through the characters either by their name, living status or both criteria. This may return multiple characters. The result of the form will return character(s) information such as name, gender, species, origin, and living status. There are also some special features to the name section of the second form. This part of the form will filter through the character based on the partcial name inputed by the user. It will then return all the charcters who name includes that sub-text.</p>
     </details>
     <div class="character-container">
       <div class="form">
