--- a/character.html
+++ b/character.html
@@ -12,7 +12,7 @@
       <h1>Character Guide</h1>
     </div>
     <div class="link-2">
-      <a href="./index.html">Home</a>
+      <a href="./index.html">HOME</a>
     </div>
     <details class="form-info">
       <summary>Form Instructions</summary>
