--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           </div>
           <p class="text-link">This is only the show's main characters and in an interdimensional reality as crazy and wild as Rick and Morty, it can be hard to keep all of the characters straight. But you can have a further look into the many characters that exist within this crazy world. Just go to the Character Guide link that is down below.</p>
           <div class="link-1">
-            <a href="./character.html">Character Guide</a>
+            <a href="./character.html">CHARACTER GUIDE</a>
           </div>
         </div>
         <footer>© 2013 Rick and Morty, LLC.</footer>
