change cards of index and characters

--- a/character.html
+++ b/character.html
@@ -38,6 +38,7 @@
           </form>
           <button type="submit">Submit</button>
         </div>
+        <div class="error-container"></div>
         <div class="characterInfo"></div>
     </main>
       <footer>© 2013 Rick and Morty, LLC.</footer>
