--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </div>
                 <div class="card-back">
                   <h3>Morty Smith</h3>
-                  <p>Rick's grandson, he is in high school and whilst trying to pass his classes (especially maths with Mr. Goldenfold) Rick is always taking him out of class to help him out on his adventures.</p>
+                  <p>A nervous but good-hearted teenager who struggles with school and survival on Rick’s chaotic adventures.</p>
                 </div>
               </div>
             </div>
@@ -74,7 +74,7 @@
                 </div>
                 <div class="card-back">
                   <h3>Beth Sanchez</h3>
-                  <p>Rick's daughter, he left her and his wife when she was a child and only came back 20 years later. Beth has abandonment issues due to this and she is terrified of her father leaving again. She is the father of Morty and Summer and the wife of Jerry.</p>
+                  <p>A confident but emotionally guarded surgeon who wrestles with her past and her complicated relationship with Rick.</p>
                 </div>
               </div>
             </div>
@@ -85,7 +85,7 @@
                 </div>
                 <div class="card-back">
                   <h3>Jerry Smith</h3>
-                  <p>The very scared husband of Beth, father of Morty and Summer, he is a very timid guy and is scared of almost everything. He doesn't appreciate Rick after leaving Beth and for taking Morty on “high-tech sci-fi-rigmarole”.</p>
+                  <p>Beth’s insecure husband who resents Rick’s influence but remains hopelessly devoted to his family.</p>
                 </div>
               </div>
             </div>
@@ -96,7 +96,7 @@
                 </div>
                 <div class="card-back">
                   <h3>Summer Smith</h3>
-                  <p>Morty's sister and the daughter of Beth and Jerry, she always tries to prove herself as a good companion to Rick so she'll be invited more but is actually quite an emotional teenager at heart. She cried when the Devil fired her from the business she helped him create.</p>
+                  <p>A sharp-tongued teen eager to prove herself capable of handling Rick’s crazy world.</p>
                 </div>
               </div>
             </div>
